<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/questionsPageRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


    <!-- Vertical LinearLayout -->
    <LinearLayout
        android:id="@+id/mainPgLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:baselineAligned="false"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/menuTitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_title_label"
            android:textColor="#2684ff"
            android:textSize="38sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"/>


        <Button
            android:id="@+id/menuPlayBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/menu_play_btn"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"/>

        <Button
            android:id="@+id/menuQuestionsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/menu_questions_btn"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"/>

        <Button
            android:id="@+id/menuSettingsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/menu_settings_btn"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"/>

        <Button
            android:id="@+id/menuExitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/menu_exit_btn"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"/>
    </LinearLayout>
</RelativeLayout>
