<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/setupConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topHorizontalGuideLine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideLine1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.11"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideLine2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideLine3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideLine4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.44"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideLine5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideLine6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.53"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideLine7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.57"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideLine8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.58"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideLine9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.825"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideLine10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.835"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomHorizontalGuideLine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.935"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftVerticalGuideLine1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftVerticalGuideLine3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.32"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftVerticalGuideLine4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.38"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightVerticalGuideLine1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightVerticalGuideLine2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightVerticalGuideLine3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.795"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightVerticalGuideLine4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.68"/>

    <TextView
        android:id="@+id/setupPgTitleLabel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/setup_pg_title_label"
        android:textColor="#000000"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="20sp"
        app:autoSizeMaxTextSize="68sp"
        app:autoSizeStepGranularity="2sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="@id/leftVerticalGuideLine1"
        app:layout_constraintEnd_toEndOf="@id/rightVerticalGuideLine1"
        app:layout_constraintTop_toTopOf="@id/topHorizontalGuideLine"
        app:layout_constraintBottom_toBottomOf="@id/horizontalGuideLine1"/>

    <ScrollView
        android:id="@+id/setupPgParentLinearLayoutScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintStart_toStartOf="@id/leftVerticalGuideLine1"
        app:layout_constraintEnd_toEndOf="@id/rightVerticalGuideLine2"
        app:layout_constraintTop_toTopOf="@id/horizontalGuideLine2"
        app:layout_constraintBottom_toBottomOf="@id/horizontalGuideLine3">
        <LinearLayout
            android:id="@+id/setupPgParentLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:baselineAligned="false">

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/setupPgAddAnotherTeamBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/setup_pg_add_another_team_btn"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="10sp"
        app:autoSizeMaxTextSize="26sp"
        app:autoSizeStepGranularity="2sp"
        app:layout_constraintStart_toStartOf="@id/leftVerticalGuideLine3"
        app:layout_constraintEnd_toEndOf="@id/rightVerticalGuideLine4"
        app:layout_constraintTop_toTopOf="@id/horizontalGuideLine4"
        app:layout_constraintBottom_toBottomOf="@id/horizontalGuideLine5"/>

    <TextView
        android:id="@+id/setupPgBoardLabel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/setup_pg_board_label"
        android:textColor="#000000"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="18sp"
        app:autoSizeMaxTextSize="46sp"
        app:autoSizeStepGranularity="2sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/leftVerticalGuideLine1"
        app:layout_constraintEnd_toEndOf="@id/leftVerticalGuideLine4"
        app:layout_constraintTop_toTopOf="@id/horizontalGuideLine6"
        app:layout_constraintBottom_toBottomOf="@id/horizontalGuideLine7"/>

    <Spinner
        android:id="@+id/setupPgBoardDropdown"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/setup_pg_board_dropdown_description"
        app:layout_constraintStart_toStartOf="@id/leftVerticalGuideLine4"
        app:layout_constraintEnd_toEndOf="@id/rightVerticalGuideLine3"
        app:layout_constraintTop_toTopOf="@id/horizontalGuideLine6"
        app:layout_constraintBottom_toBottomOf="@id/horizontalGuideLine7"/>

    <ImageView
        android:id="@+id/setupPgBoardImg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/setup_pg_img_description"
        android:src="@drawable/blank_board_icon"
        app:layout_constraintDimensionRatio="13:12"
        app:layout_constraintEnd_toEndOf="@id/rightVerticalGuideLine4"
        app:layout_constraintStart_toStartOf="@id/leftVerticalGuideLine3"
        app:layout_constraintTop_toBottomOf="@id/horizontalGuideLine8"
        app:layout_constraintBottom_toTopOf="@id/horizontalGuideLine9" />

    <Button
        android:id="@+id/setupPgStartBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/setup_pg_start_btn"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="18sp"
        app:autoSizeMaxTextSize="86sp"
        app:autoSizeStepGranularity="2sp"
        app:layout_constraintStart_toStartOf="@id/leftVerticalGuideLine3"
        app:layout_constraintEnd_toEndOf="@id/rightVerticalGuideLine4"
        app:layout_constraintTop_toTopOf="@id/horizontalGuideLine10"
        app:layout_constraintBottom_toBottomOf="@id/bottomHorizontalGuideLine"/>

</androidx.constraintlayout.widget.ConstraintLayout>
